# ScaleStore

./: CMakeLists.txt  LICENSE  README.org
backend/: CMakeLists.txt
backend/scalestore/: Config.cpp  Config.hpp  ScaleStore.cpp  ScaleStore.hpp
backend/scalestore/profiling/: CounterRegistry.hpp  ProfilingThread.hpp
backend/scalestore/profiling/counters/: BMCounters.cpp  BMCounters.hpp  CPUCounters.cpp  CPUCounters.hpp  RDMACounters.cpp  RDMACounters.hpp  WorkerCounters.cpp  WorkerCounters.hpp
backend/scalestore/rdma/: CommunicationManager.hpp  MessageHandler.cpp  MessageHandler.hpp
backend/scalestore/rdma/messages/: Messages.hpp
backend/scalestore/storage/buffermanager/: AccessFunctors.hpp  AsyncReadBuffer.cpp  AsyncReadBuffer.hpp  AsyncWriteBuffer.cpp  AsyncWriteBuffer.hpp  BufferFrame.hpp  BufferFrameGuards.cpp  BufferFrameGuards.hpp  Buffermanager.cpp  Buffermanager.hpp  Buffermanager.tpp  Catalog.hpp  Guard.hpp  Page.hpp  PageProvider.cpp  PageProvider.hpp  Partition.cpp  Partition.hpp  PartitionedQueue.hpp
backend/scalestore/storage/datastructures/: BTree.hpp  Bitmap.hpp  DistributedBarrier.hpp  RingBuffer.hpp  SmallMap.hpp  Vector.hpp
backend/scalestore/syncprimitives/: HybridLatch.hpp  SpinLock.hpp
backend/scalestore/threads/: Concurrency.hpp  CoreManager.hpp  ThreadContext.hpp  Worker.cpp  Worker.hpp  WorkerPool.cpp  WorkerPool.hpp
backend/scalestore/utils/: BatchQueue.hpp  FNVHash.cpp  FNVHash.hpp  MPMCQueue.hpp  MemoryManagement.hpp  Parallelize.cpp  Parallelize.hpp  RandomGenerator.cpp  RandomGenerator.hpp  ScrambledZipfGenerator.cpp  ScrambledZipfGenerator.hpp  Time.cpp  Time.hpp  ZipfGenerator.cpp  ZipfGenerator.hpp  ZipfRejectionInversion.hpp
distexperiments/examples/: basic.py  buffered_stdout.py  compile.py  config.py  cpu_load.py  csv_parser.py  cwd.py  dpkg_query.py  environment_variables.py  gdb.py  restart.py  serverlist_ops.py  simple_grid.py  timeout.py
distexperiments/experiments/: config.py  microbenchmark_pp.py  microbenchmark_pp_single_node.py  olap_scale_servers.py  pp_test_no_remote_effect.py  pp_test_remote_memory_scan.py  pp_test_remote_memory_scan_all.py  tpcc_scale_nodes.py  ycsb_gam_compare.py  ycsb_increase_zipf.py  ycsb_nam.py  ycsb_scale_data.py  ycsb_scale_servers_and_data.py  ycsb_scale_servers_fixed_data.py  ycsb_single_node_scalability.py  ycsb_systemcomparision_latency.py  ycsb_systemcomparision_nam.py  ycsb_workload_change.py
frontend/: CMakeLists.txt  OLAP.cpp  frontend.cpp
frontend/benchmarks/: hashTable.cpp  pageProvider.cpp  random.cpp  samplingSpeed.cpp  ssd_benchmark.cpp
frontend/consistency/: BTreeCheck.cpp  Contention.cpp
frontend/tests/: BTreeTest.cpp
frontend/tpcc/: adapter.hpp  schema.hpp  tpcc.cpp  tpcc_workload.hpp  types.hpp
frontend/ycsb/: btree.hpp  ycsb.cpp  ycsb_in_memory_tree.cpp  ycsb_latency.cpp  ycsb_nam.cpp  ycsb_workload_change.cpp  zipf_distribution.cpp
libs/: FindNuma.cmake  ibverbs.cmake  rdmacm.cmake
shared-headers/: Defs.hpp  PerfEvent.hpp
